--- a/Matplotlib_practice.ipynb
+++ b/Matplotlib_practice.ipynb
@@ -9,6 +9,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b567e3a2-9d54-472b-8f72-7d3d017c1b23",
+   "metadata": {},
+   "source": [
+    "This practice notebook covers Matplotlib basics, plotting with Numpy and Pandas, 3D plotting, and animated visualizations to help you create a wide range of static and dynamic plots for data analysis."
+   ]
+  },
+   {
+   "cell_type": "markdown",
+   "id": "9d37a4ae-b91b-4f89-93e2-1b2d3c87f02f",
+   "metadata": {},
+   "source": [
+    "## Contents:\n",
+    "- Matplotlib basics\n",
+    "- Plotting with numpy\n",
+    "- Plotting with DataFrame\n",
+    "- 3D plotting\n",
+    "- 3D Plotting with animation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "31f51cd8-2a00-477d-8206-5828725feab3",
